estrutura-fluxograma
Preparando uma estrutura de dados customizada para o fluxograma.